2009-12-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (is_textfile, is_demo_or_text, is_graphic_file):
	better way to check for extension

2009-12-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar.c: renamed from lua/lua-avt.c

2009-12-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character): ignorable characters

2009-11-24  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (avta_color_selection): optimized

	* avatar-audio.c (avt_initialize_audio):
	read alert sound from sound data with header

2009-11-22  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/multiply.pas: include sounds
	pascal/negative.inc, pascal/positive.inc: new files

2009-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/multiply.pas: include image of teacher
	pascal/teacher.inc: new file

2009-11-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c, lua/akfavatar-lua.c: new files
	(further developement not documented until first release)

------------------------------------------------------------------------

2009-11-08  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.18.0 released

	* akfavatar.h (avt_bool_t): unsigned char

2009-11-07  Andreas K. Foerster  <info@akfoerster.de>

	* example.c: updated and more comments

2009-10-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager): new function
	renamed from avt_pager_mb
	(avt_pager_mb): wrapper for avt_pager
	(avt_pager_line, avt_pager_screen, avt_pager_lines_back):
	adapted

	* avatarsay.c (ask_textfile):
	call check_encoding on the text (for UTF-16/32 texts)

2009-10-30  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_set_avatar_name_mb):
	fix: handle NULL or empty string correctly

	* akfavatar.h, avatar.c (avt_get_color): new function
	colorchooser.c (avta_color_selection): adapted

2009-10-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm_RW):
	support old X10 format (deprecated!)
